k3s/proxy/wekan/endpoint.yml
kind: Endpoints
apiVersion: v1
metadata:
  name: wekan
  namespace: proxy
subsets:
  - addresses:
      - ip: 172.19.195.161
    ports:
      - port: 9001
        name: "apache"
