k3s/proxy/wekan/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wekan
  namespace: proxy
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: wekan.neobradley.me
      http:
        paths:
          - path: /
            backend:
              serviceName: wekan
              servicePort: 80
